--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="one_work" onclick="show_popup('DreamWombo API',`Данный проект был сделан для моего бота для ВКонтакте. <a href='https://github.com/SKISTE/Dream-Wombo-API'>(Ссылка)</a><br><br>`)" data-name="DreamWombo API">
                     <img src="assets/wombo.png">
                 </div>
-                <div class="one_work" onclick="show_popup('WebHospital','Full stack приложение, в к')" data-name="Веб госпиталь">
+                <div class="one_work" onclick="show_popup('WebHospital','Full stack приложение, в кff')" data-name="Веб госпиталь">
                     <img src="assets/wb.png">
                 </div>
                 <div class="one_work" onclick="show_popup('Остальное','У меня еще огромное кол-во проектов, которые остались в тени. В будущем здесь будет все больше и больше проектов...')" data-name="Остальное">
