--- a/index.html
+++ b/index.html
@@ -61,20 +61,41 @@
                 <div class="one_work" onclick="show_popup('Discord SoundBoard Editor','С недавним обновлением Discord появилась звуковая панель на серверах. На ней стоит ограничение в 8 звуков. Нам с друзьями такое не по нраву, и я решил написать небольшой скрипт, который берет из библиотеки звуков случайный и загружает. Для этого проекта мне пришлось выискивать нужные ссылки для запросов по api, разбирать все данные которые передаются и т.д.')" data-name="Discord SoundBoard Editor">
                     <img src="assets/ds.png">
                 </div>
-                <div class="one_work" onclick="show_popup('DreamWombo API',`Данный проект был сделан для моего бота для ВКонтакте. <a href='https://github.com/SKISTE/Dream-Wombo-API'>(Ссылка)</a><br><br>`)" data-name="DreamWombo API">
+                <div class="one_work" onclick="show_popup('DreamWombo API',`Данный проект был сделан для моего бота для ВКонтакте.<br><br>Данный проект это обертка для взаимодействия с генеративной нейросетью DreamWombo. Больше тут сказать то и нечего.<br><br> <a href='https://github.com/SKISTE/Dream-Wombo-API'>Ссылка</a><br><br>`)" data-name="DreamWombo API">
                     <img src="assets/wombo.png">
                 </div>
-                <div class="one_work" onclick="show_popup('WebHospital','Full stack приложение, в кff')" data-name="Веб госпиталь">
-                    <img src="assets/wb.png">
+                <div class="one_work" onclick="show_popup('WebHospital',`Full stack приложение, в котором пользователь вводит тип своего животного (Собака/кошка/птица/крупно рогатый скот/мелко рогатый скот) и его возвраст. После чего попадает на страницу, где пользователь должен вводить симптомы, и судя по тому, какие симптомы у животного, выдает все возможные болезни.<br>Проект собирался для ветеринара, и там есть функция добавления карты пациента, где можно вписать адрес, номер и т.д., так же есть возможность распечатать эту карту, что бы выдать это уже непосредственно пациенту.<br><br>На данный момент проект заморожен.<br><br><a href='https://skiste.github.io/WebAnimalHospital/index.html'>Ссылка</a><br><br><img class='vertical' src='assets/web_hospital.gif'><br><br><br>`)" data-name="Веб госпиталь для животных">
+                    <img src="assets/web_hospital.png">
                 </div>
-                <div class="one_work" onclick="show_popup('Остальное','У меня еще огромное кол-во проектов, которые остались в тени. В будущем здесь будет все больше и больше проектов...')" data-name="Остальное">
+                <div class="one_work" onclick="show_popup('Amino - Утилиты',`Есть такая социальная сеть: Amino. Сделана она была что бы люди увлеченные одной темой могли собраться в одном месте. И так уж вышло, что сделана она была максимально криво, этим то я и воспользовался.<br><br>Начал я с написания системных сообщений в чатах, которые никак от настоящих системных не отличались, следовательно огромное поле для шуток и &#8223;полностью анонимного&#8223; диалога. <br><br>Так же там есть &#8223;внутриигровая&#8223; валюта - монеты. Каждый день можно было получать до 10 монет легально, и до 200 через определенные хитрости. Я же в свою очередь написал генератор аккаунтов и прогонял их каждый день, получая боснословные суммы для обычных пользователей сети.`)" data-name="Amino - утилиты">
+                    <img src="assets/amino.jpg">
+                </div>
+                <div class="one_work" onclick="show_popup('Собственный лаунчер',`Данный проект был задуман чисто для собственного пользования. Имеет немного функций, такие как: отложенный запуск, запуск смс бомбера, перезапуск процесса проводника, кейлогген, генерация юникод символов и генерация случайного числа. Есть светлая и темная тема, и погода в моем городе на момент запуска приложения<br><img src='assets/launcher.gif'>`)" data-name="Собственный &#8223;лаунчер&#8223;">
+                    <img src="assets/launcher.png">
+                </div>
+                <div class="one_work" onclick="show_popup('Пульт управления пк',`Свой собственный локальный веб сервер. Грубо говоря сайт, при помощи которого я могу управлять пк. Разработка этого проекта была той еще проблемой, именно поэтому мне пришлось изучить WebSocket протокол, UserScript'ы и библиотеку для python 'socket'.<br><br>Из возможностей этого пульта:<br>Менять громкость самой системы, определнных приложений и в музыки в социальной сети ВКонтакте.<br>Менять яркость мониторов на выбор.<br>Отключать определенные приложения, как в диспетчере задач.<br>Запускать веб страницы и управлять ютубом (громкость, перемотка).<br><br><img class='vertical' src='assets/control_screen.png'>`)" data-name="Пульт управления ПК">
+                    <img src="assets/control.png">
+                </div>
+                <div class="one_work" onclick="show_popup('Будильник для пк',`Простой проект, со своим веб сервером в качестве настроек.<br>Обычный будильник, сделанный на скорую руку своему товарищу. Вся его суть в том, что он создает 'план', через сколько запустить каждый будильник, следовательно почти не нагружает систему на фоне.<br>Работает на основе медиаплеера VLC, при наступлении времени, включает плейлист, который выбирается в настройках на определенную громкость, которая так же настраивается в настройках<br><br><img src='assets/niklog.png'><br>Непонятные иероглифы из за старости проекта и случайной очистке списка будильников c;`)" data-name="Будильник для пк">
+                    <img src="assets/vlc.png">
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+                <div class="one_work" onclick="show_popup('Остальное','У меня еще огромное кол-во проектов, которые остались в тени. Просто перечислю их здесь:<br>• Скачивание фоторафий из большого списка прямых ссылок на них<br>• Блюрер - замазывание определенных областей фотографии<br>• Авто крафт в майнкрафте - было дело, когда я играл на сборках, и там был крафт, который нельзя автоматизировать, и я решил реализовать машинное зрение, что бы смотреть кинцо, пока робот работает за меня.<br>• Пинг понг - Один из моих первых проектов, решил попробовать написать с нуля пинг понг, используя PyGame, вышло вроде бы сносно.<br>• ')" data-name="Остальное">
                     <img src="assets/more.png">
                 </div>
                 
-
-                <!-- <div class="one_work" onclick="show_popup('title','t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>')" data-name="">
-                    <img src="assets/wb.png">
-                </div> -->
+            
 
                 <!-- <div class="one_work" onclick="show_popup('title','text')" data-name="">
                     <img src="assets/wb.png">
