--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
 
-                <div class="one_work" onclick="show_popup('Остальное','У меня еще огромное кол-во проектов, которые остались в тени. Просто перечислю их здесь:<br>• Скачивание фоторафий из большого списка прямых ссылок на них<br>• Блюрер - замазывание определенных областей фотографии<br>• Авто крафт в майнкрафте - было дело, когда я играл на сборках, и там был крафт, который нельзя автоматизировать, и я решил реализовать машинное зрение, что бы смотреть кинцо, пока робот работает за меня.<br>• Пинг понг - Один из моих первых проектов, решил попробовать написать с нуля пинг понг, используя PyGame, вышло вроде бы сносно.<br>• ')" data-name="Остальное">
+                <div class="one_work" onclick="show_popup('Остальное','У меня еще огромное кол-во проектов, которые остались в тени. Просто перечислю их здесь:<br>• Скачивание фоторафий из большого списка прямых ссылок на них<br>• Блюрер - замазывание определенных областей фотографии<br>• Авто крафт в майнкрафте - было дело, когда я играл на сборках, и там был крафт, который нельзя автоматизировать, и я решил реализовать машинное зрение, что бы смотреть кинцо, пока робот работает за меня.<br>• Пинг понг - Один из моих первых проектов, решил попробовать написать с нуля пинг понг, используя PyGame, вышло вроде бы сносно.<br>Ну на этом пока все, остальное слишком мелкое, либо не стоит осветления в массы')" data-name="Остальное">
                     <img src="assets/more.png">
                 </div>
                 
