--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
             <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
             <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
             <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
+            <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
+            <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
+            <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
+            <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
+            <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
+            <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
+            <div class="hello_circle" data-top="40px" data-left="70%" data-opacity="90%" data-size="12vw" data-color="#eff1e0"></div>
+
 
 
             <img class="show_hello" data-delay="0.2s" style="opacity: 0;" src="assets/developer.png">
