--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@
         </section>
 
         <section id="about" class="section">
-            <span class="">Еще раз здравствуйте! Меня зовут Степан, и я начинающий Python-разработчик. Изучаю этот язык уже 3 года,
-                пока в качестве хобби для саморазвития. За это время я реализовал множество проектов разной сложности,
-                постепенно совершенствуя свои навыки программирования. Так же практикуюсь во многих других языках.
+            <span class="element-animation THIS_IS_SPAN">Еще раз здравствуйте! Меня зовут Степан, и я начинающий Python-разработчик.</span>
+            <span class="element-animation THIS_IS_SPAN">Изучаю этот язык уже 3 года, пока в качестве хобби для саморазвития.</span>
+            <span class="element-animation THIS_IS_SPAN">За это время я реализовал множество проектов разной сложности, постепенно совершенствуя свои навыки программирования.Так же практикуюсь во многих других языках.</span>
+            <span class="element-animation THIS_IS_SPAN">Немного о себе: мне 19 лет, я студент 4 курса по специальности "КИПиА".</span>
+            <span class="element-animation THIS_IS_SPAN">Хоть моя основная специализация не связана с программированием, это не мешает мне развиваться в этой сфере.</span>
+            <span class="element-animation THIS_IS_SPAN">Пока я только новичок в роли фрилансера, но стремлюсь к профессиональному росту и готов взяться за интересные проекты,чтобы применить и улучшить свои навыки.</span>
                 <br><br>
-                Немного о себе: мне 19 лет, я студент 4 курса по специальности "КИПиА". Хоть моя основная специализация не
-                связана с программированием, это не мешает мне развиваться в этой сфере. Пока я только новичок в роли фрилансера,
-                но стремлюсь к профессиональному росту и готов взяться за интересные проекты, чтобы применить и улучшить свои навыки.
-                <br><br>
-                <a href="https://t.me/skiste">t.me/skiste</a></span>
+            <span class="element-animation THIS_IS_SPAN"><a href="https://t.me/skiste">t.me/skiste</a></span>
         </section>
         <section id="works" class="section">
             <div class="works_title">Мои работы:</div>
