--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <span class="element-animation THIS_IS_SPAN">Хоть моя основная специализация не связана с программированием, это не мешает мне развиваться в этой сфере.</span>
             <span class="element-animation THIS_IS_SPAN">Пока я только новичок в роли фрилансера, но стремлюсь к профессиональному росту и готов взяться за интересные проекты,чтобы применить и улучшить свои навыки.</span>
                 <br><br>
-            <span class="element-animation THIS_IS_SPAN" id="TG_URL"><a href="https://t.me/skiste">t.me/skiste</a></span>
+            <!-- here is тg -->
         </section>
         <section id="works" class="section">
             <div class="works_title">Мои работы:</div>
